syntax = "proto3";
package content;
import "content/moment.enum.proto";
import "content/content.enum.proto";
import "utils/proto/go/go.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "xyz.hoper.protobuf.content";
option go_package = "github.com/liov/hoper/go/v2/protobuf/content";
option (go.file) = {non_omitempty:true};


message Mood{
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null;primaryKey" validate:"required,gte=2,lte=10" annotation:"名称"'}];
  string description = 17 [(go.field) = {tags:'gorm:"size:100"  annotation:"描述"'}];
  uint64 userId = 3 [(go.field) = {tags:'gorm:"size:20" annotation:"用户id"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now()"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message Tag {
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null;primaryKey" validate:"required,gte=2,lte=10" annotation:"名称"'}];
  string description = 3 [(go.field) = {tags:'gorm:"size:100"  annotation:"描述"'}];
  string expressionURL = 17 [(go.field) = {tags:'gorm:"size:255"  annotation:"表情url"'}];
  uint64 userId = 1 [(go.field) = {tags:'gorm:"size:20" annotation:"用户id"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now()"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message Category{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null;primary_key" validate:"required,gte=2,lte=10" annotation:"名称"'}];
  uint64 parentId = 3 [(go.field) = {tags:'gorm:"default:0;index" annotation:"直接父分类的ID"'}];
  uint32 sequence = 4 [(go.field) = {tags:'gorm:"type:int2;default:0" annotation:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint64 userId = 5 [(go.field) = {tags:'gorm:"size:20" annotation:"用户id"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now()"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message Attributes{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null;primary_key" validate:"required,gte=2,lte=10" annotation:"名称"'}];
  string describe = 3 [(go.field) = {tags:'gorm:"size:255;default:\'\'"  annotation:"描述"'}];
  uint32 range = 4 [(go.field) = {tags:'gorm:"type:int2" annotation:"属性使用范围"'}];
  uint32 style = 5 [(go.field) = {tags:'gorm:"type:int2" annotation:"属性的值输入风格"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now()"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message ContentAttrs{
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_content" validate:"required" annotation:"相关id"'}];
  ContentType type = 2 [(go.field) = {tags:'gorm:"type:int2;not null" validate:"required" annotation:"内容相关类型"'}];
  uint64 attrId = 3[(go.field) = {tags:'gorm:"size:20;not null;index:idx_content;index:idx_tag" validate:"required" annotation:"相关id"'}];
  AttributesType attrType = 4 [(go.field) = {tags:'gorm:"type:int2;not null" validate:"required" annotation:"属性相关类型"'}];
}

message ContentTag{
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_content" validate:"required" annotation:"相关id"'}];
  ContentType type = 2 [(go.field) = {tags:'gorm:"type:int2;not null" validate:"required" annotation:"相关类型"'}];
  uint64 tagId = 3[(go.field) = {tags:'gorm:"size:20;not null;index:idx_content;index:idx_tag" validate:"required" annotation:"相关id"'}];
}